--- a/MetricsManager/MetricsManager.csproj
+++ b/MetricsManager/MetricsManager.csproj
@@ -12,10 +12,12 @@
     <PackageReference Include="FluentMigrator.Runner" Version="3.2.16" />
     <PackageReference Include="FluentMigrator.Runner.SQLite" Version="3.2.16" />
     <PackageReference Include="Intercom.Dotnet.Client" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="NLog" Version="4.7.9" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0" />
     <PackageReference Include="Quartz" Version="3.3.2" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.114.1" />
 	<Content Update="nlog.config" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
